👌 IMPROVE: Stabilized application start and added neo db connection