@@ -6,6 +6,7 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -16,16 +17,11 @@ import java.io.IOException;
 
 
 @Component
+@RequiredArgsConstructor
 public class JwtAuthFilter extends OncePerRequestFilter {
 
     private final JwtService jwtService;
-
     private final UserRepository userRepo;
-
-    public JwtAuthFilter(JwtService jwtService, UserRepository userRepo) {
-        this.jwtService = jwtService;
-        this.userRepo = userRepo;
-    }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
@@ -39,7 +35,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
                 if (user != null) {
                     var authorities = user.getRoles().stream()
                             .map(r -> new SimpleGrantedAuthority("ROLE_" + r.name()))
-                            .collect(java.util.stream.Collectors.toList());
+                            .toList();
                     var authToken = new UsernamePasswordAuthenticationToken(username, null, authorities);
                     SecurityContextHolder.getContext().setAuthentication(authToken);
                 }
